[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/debug/UILogic.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 116.0
margin_bottom = 53.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 14.0

[node name="StateLabel_static" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 14.0
text = "State:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentStateLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 102.0
margin_bottom = 14.0
text = " stateless"

[node name="HBoxContainerOverlap" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 102.0
margin_bottom = 32.0

[node name="CollisionLabel_static" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerOverlap"]
margin_right = 54.0
margin_bottom = 14.0
text = "Overlap:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentOverlapLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerOverlap"]
margin_left = 58.0
margin_right = 100.0
margin_bottom = 14.0
text = "-none-"

[node name="HBoxContainerClimb" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 102.0
margin_bottom = 50.0

[node name="ClimbLabel_static" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerClimb"]
margin_right = 41.0
margin_bottom = 14.0
text = "Climb:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentClimbLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerClimb"]
margin_left = 45.0
margin_right = 91.0
margin_bottom = 14.0
text = " -none-"

[node name="HBoxContainerFPS" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 102.0
margin_bottom = 68.0

[node name="FPSLabel_static" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerFPS"]
margin_right = 26.0
margin_bottom = 14.0
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentFPSLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerFPS"]
margin_left = 30.0
margin_right = 94.0
margin_bottom = 14.0
text = " -inactive-"

[node name="HBoxContainerLookDir" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 102.0
margin_bottom = 86.0

[node name="LookLabel_static" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerLookDir"]
margin_right = 34.0
margin_bottom = 14.0
text = "Look:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentDirLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainerLookDir"]
margin_left = 38.0
margin_right = 84.0
margin_bottom = 14.0
text = " -none-"
